# gryzzly-experiment

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
csvs/: declarations.csv  subscriptions.csv  teams.csv  users.csv
ltrroe/core/: algorithms.py
ltrroe/experiments/: empirical_triangle.py
ltrroe/ml/: rf_duration.py  rf_risk.py
ltrroe/pipeline/: import_data.py  run_simulations.py
ltrroe/viz/: efficiency_clusters.py  figures.py
outputs/: metrics_empirical_triangle_10000.csv  metrics_empirical_triangle_clean_10000.csv  metrics_empirical_triangle_clean_10000_full.csv  metrics_empirical_triangle_test.csv  metrics_results_3000.csv  metrics_results_full.csv  metrics_results_large.csv  ml_empirical_triangle_10000_results.csv  ml_empirical_triangle_clean_10000_results.csv
pipeline/: 1_import_data.py  2_run_simulations.py  3_figures.py  4_rf_duration.py  5_rf_risk.py  6_efficiency_clusters.py  6_visualisation.py  7_efficiency_clusters.py
pipeline_ru/: 1_import_data.py  2_run_simulations.py  3_rf_duration.py  4_rf_risk.py  5_efficiency_clusters.py  6_visualisation.py
src/: ltrroe_objects.py
