[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ltrroe"
version = "0.1.0"
description = "Stochastic schedule risk analysis on the Gryzzly dataset"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ltrroe*"]
